--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,10 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "25.1.8937393"
         kotlinVersion = "1.8.0"
+
+         RNMapboxMapsImpl = "mapbox"
     }
+    // repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
@@ -18,4 +21,22 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = 'mapbox'
+                // Use the secret token you stored in gradle.properties as the password
+                password = 'sk.eyJ1Ijoib255bWVrbm93IiwiYSI6ImNscnc1MHJkcjB6ZWcyaW11bGp5eTI0aTYifQ.z0ufT5e6CoGP5ZVT4_lwdw'
+            }
+        }
+    }
+}
 apply plugin: "com.facebook.react.rootproject"
+
