--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^13.5.1",
+    "@rnmapbox/maps": "^10.1.8",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
@@ -28,7 +30,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18"
